# brain-v8

./: .gitignore  HANDOFF-NEXT.md  OPERATIONS.md  README.md  V8-DOD-v2.1-patch.md  V8-DOD-v2.md  V8-DOD.md  auto-heal.sh  brain-debug.sh  build_self_review_v9.py  monitor-brain.sh  pyproject.toml  test_search_standalone.py
brain/v10/: pyproject.toml
brain/v10/brain/: analysis_mode.py  argument_tracker.py  bing_search.py  brain.py  brave_search.py  checkpoint.py  config.py  dimension_seeder.py  evidence.py  gate1.py  gate2.py  page_fetch.py  pipeline.py  preflight.py  proof.py  residue.py  search.py  sonar_search.py  synthesis.py  types.py
brain/v10/tests/: conftest.py  test_analysis_mode.py  test_anti_groupthink.py  test_argument_tracker.py  test_brain_e2e.py  test_breadth_recovery.py  test_checkpoint.py  test_debug.py  test_decisive_claims.py  test_evidence.py  test_gate1.py  test_gate2.py  test_invariant.py  test_page_fetch.py  test_pipeline.py  test_preflight.py  test_proof.py  test_residue.py  test_retroactive_premise.py  test_semantic_contradiction.py  test_short_circuit_contract.py  test_sonar_search.py  test_synthesis_packet.py  test_types.py
brain/v9/: HANDOFF.md  HANDOVER-BRAIN-V8-NEXT.md  OPERATIONS.md  build_self_review.py  build_self_review_v9.py  pyproject.toml
brain/v9/brain/: __init__.py  brain.py  decisive_claims.py  divergent_framing.py  evidence_extractor.py  invariant.py  llm.py  page_fetch.py  perspective_cards.py  playwright_search.py  proof.py  residue.py  rounds.py  semantic_contradiction.py  stability.py  synthesis_packet.py
ein/: README.md  (+6 more)
(+186 files in other folders)
